# lol_highlight_detection

./: .dockerignore  .gitignore  .gitpod.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  LolHighlight.ipynb  README.md  TEST_SOL.py  TEST_ST.py  app.ipynb  app.py  download.py  env.yml  explain_model.ipynb  fastai.ipynb  fastai_inference.ipynb  highights_nb.ipynb  highlights.csv  highlights.tsv  inference.py  ingest.py  keras.ipynb  labeling.py  lightning.ipynb  model.py  model_fastai.py  model_keras.py  present.ipynb  pyproject.toml  r2.py  rclone2.conf  requirements.txt  sol_app.py  utils.py  video_classification.ipynb  viz.ipynb
.devcontainer/: devcontainer.json  post_create.sh
.github/: FUNDING.yml
data_utils/: frame_datamodule.py  frame_dataset.py  rebalancing.py  splitter.py
gradio_app/: gradio_app.py
lightning_logs/version_0/: events.out.tfevents.1689779113.MBPsomtorHampus.lan.23857.0
models/: lightning_wrapper.py  resnet.py  rnn.py
presentation/: present.html  present.ipynb
presentation/imgs/: the idea.excalidraw
solara_app/: app.py  css.py  folders.py  infer.py  page_download.py  page_inference.py  page_models.py  sol_utils.py
solara_app/mini_components/: c_inference.py  simple.py
streamlit_app/: app.py  explainer.py  page_download.py  page_inference.py
utils/: kick_dl.py  movie_clips.py  time_slice.py
